[Nix] Fails to find audio decoder for mp4a with media.allow-audio-non-utility = false
Categories
(Core :: Audio/Video, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | unaffected |
| firefox114 | --- | unaffected |
| firefox115 | --- | unaffected |
| firefox116 | --- | fixed |
People
(Reporter: gerard-majax, Assigned: gerard-majax)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
It is reported that after the fix for https://bugzilla.mozilla.org/show_bug.cgi?id=1839852 mp4a is still unplayable
| Assignee | ||
Comment 1•2 years ago
|
||
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswresample.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavutil.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavformat.so.59.27.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswscale.so.6.7.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavfilter.so.8
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavfilter.so.8.44.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavfilter.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswresample.so.4
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswscale.so.6
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavutil.so.57.28.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavdevice.so.59
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libpostproc.so.56.6.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswresample.so.4.7.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavformat.so.59
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libswscale.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavcodec.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libpostproc.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavcodec.so.59.37.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavutil.so.57
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libpostproc.so.56
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavdevice.so.59.7.100
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavdevice.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavformat.so
/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib/libavcodec.so.59
From MOZ_SANDBOX_LOGGING=1 around Utility, we can see proper loading of:
- first
libavcodec.so.59 - then
libswresample.so.4(likely as a dep) - then
libavutil.so.57(dep as well)
From there we can see the code tries to load libvpx.so.7 but fails to find it, so the ffmpeg linker goes from 59 to 58: https://searchfox.org/mozilla-central/rev/d31e56f7b3c2c18b8071a7b2a2fb6b4e01e3d3e8/dom/media/platforms/ffmpeg/FFmpegRuntimeLinker.cpp#43-44
| Assignee | ||
Comment 2•2 years ago
|
||
it lives at /nix/store/pwximjndk01ahj360jfrv9ypa21jnxv1-libvpx-1.12.0/lib/libvpx.so.7.1.0 and LD_LIBRARY_PATH=nix/store/agf0hl6zyzj1cydfxydmkdaksx00zh3h-firefox-bin-116.0a1/usr/lib/firefox-bin-116.0a1:/nix/store/hlf86vmyh14scxwann44fy3azvc6njaj-systemd-251.7/lib:/nix/store/rcfb98m04nzsf3rwasfqh3wmx7cvhqcw-libva-2.16.0/lib:/nix/store/bk62iwpqiaipgbim564f7zy6prdwpvri-mesa-22.2.3/lib:/nix/store/q360zpybna4djr4kjhjg6hmkk3vj7pjf-libnotify-0.8.1/lib:/nix/store/rif6jfrxdvg7imhz0yhr1xpgnnpld66a-libXScrnSaver-1.2.3/lib:/nix/store/a4pff549sk2idnkpzk5nsfps3mdkdnvm-cups-2.4.2-lib/lib:/nix/store/l9qf4kim0cbixk8jvm4sxi1bca7av1aa-pciutils-3.8.0/lib:/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib:/nix/store/r7gl900my2fw6k33nxh2r7rzv8nv0s25-libkrb5-1.20/lib:/nix/store/cxhib72pd7n3fzl1yh6lrm4q16l42kws-libglvnd-1.5.0/lib:/nix/store/i5z7p1225ypgjfzzi623d5iymz5w4ssr-libpulseaudio-16.1/lib:/nix/store/hlf86vmyh14scxwann44fy3azvc6njaj-systemd-251.7/lib64:/nix/store/rcfb98m04nzsf3rwasfqh3wmx7cvhqcw-libva-2.16.0/lib64:/nix/store/bk62iwpqiaipgbim564f7zy6prdwpvri-mesa-22.2.3/lib64:/nix/store/q360zpybna4djr4kjhjg6hmkk3vj7pjf-libnotify-0.8.1/lib64:/nix/store/rif6jfrxdvg7imhz0yhr1xpgnnpld66a-libXScrnSaver-1.2.3/lib64:/nix/store/a4pff549sk2idnkpzk5nsfps3mdkdnvm-cups-2.4.2-lib/lib64:/nix/store/l9qf4kim0cbixk8jvm4sxi1bca7av1aa-pciutils-3.8.0/lib64:/nix/store/j6529rsghzapf490w9zdizwl0hkysfv0-ffmpeg-5.1.2/lib64:/nix/store/r7gl900my2fw6k33nxh2r7rzv8nv0s25-libkrb5-1.20/lib64:/nix/store/cxhib72pd7n3fzl1yh6lrm4q16l42kws-libglvnd-1.5.0/lib64:/nix/store/i5z7p1225ypgjfzzi623d5iymz5w4ssr-libpulseaudio-16.1/lib64 so we have no explicit reference to it so we can't even allow
| Assignee | ||
Comment 3•2 years ago
|
||
Comment 4•2 years ago
|
||
:gerard-majax, since this bug is a regression, could you fill (if possible) the regressed_by field?
For more information, please visit BugBot documentation.
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1835804
Comment 7•2 years ago
|
||
| bugherder | ||
Comment 8•2 years ago
|
||
Testing Firefox Nightly from nixpkgs-mozilla on NixOS, with media.allow-audio-non-utility set to false and with the h264ify addon on youtube (avc1.4d401e (135) / mp4a.40.2 (140) )
now plays videos.
Comment 9•2 years ago
|
||
Set release status flags based on info from the regressing bug 1835804
Description
•