Bug 1840371 - Allow /nix/store for loading ffmpeg dependencies r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D182011